<resources>
    <string name="app_name">ProjectZero</string>
    <string name="action_settings">Settings</string>
    <string name="title">My App Portfolio</string>
    <string name="my_nano_apps">My Nanodegree Apps!</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="buildit">BUILD IT BIGGER</string>
    <string name="xyz">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="this_button_toast">This Button will launch %s</string>


</resources>
