<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ProjectZeroActivityFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_nano_apps"
            android:textSize="18sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/spotify"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_margin="8dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/spotify" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/scores"
            android:layout_width="match_parent"

            android:layout_height="100dp"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_margin="8dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/scores" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/library"
            android:layout_width="match_parent"

            android:layout_height="100dp"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_margin="8dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/library" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/buildit"
            android:layout_width="match_parent"

            android:layout_height="100dp"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_margin="8dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buildit" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/xyz"
            android:layout_width="match_parent"

            android:layout_height="100dp"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_margin="8dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/xyz" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/capstone"
            android:layout_width="match_parent"

            android:layout_height="100dp"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_margin="8dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/capstone" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
